// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can be instantiated with a Set 1`] = `
Cell {
  "coord": Array [
    0,
    0,
  ],
  "isValid": true,
  "notes": Array [
    true,
    true,
    true,
    false,
    false,
    false,
    false,
    false,
    false,
  ],
}
`;

exports[`can be instantiated with a value 1`] = `
Cell {
  "_value": 1,
  "coord": Array [
    0,
    0,
  ],
  "isValid": true,
}
`;

exports[`can be instantiated with a value and not be fixed 1`] = `
Cell {
  "_value": 1,
  "coord": Array [
    0,
    0,
  ],
  "isValid": true,
  "notes": Array [
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
  ],
}
`;

exports[`can be instantiated with an array 1`] = `
Cell {
  "coord": Array [
    0,
    0,
  ],
  "isValid": true,
  "notes": Array [
    true,
    true,
    true,
    false,
    false,
    false,
    false,
    false,
    false,
  ],
}
`;

exports[`can be instantiated with just coordinates 1`] = `
Cell {
  "coord": Array [
    0,
    0,
  ],
  "isValid": true,
  "notes": Array [
    true,
    true,
    true,
    true,
    true,
    true,
    true,
    true,
    true,
  ],
}
`;

exports[`prints: cell with notes 1, 5, and 9 1`] = `
"1  
 5 
  9
"
`;

exports[`prints: cell with now value and all notes 1`] = `
"123
456
789
"
`;

exports[`prints: cell with value "1" 1`] = `
"┌─┐
│1│
└─┘"
`;

exports[`unsetsValue() fixed cells cannot have their values unset 2`] = `
Cell {
  "_value": 1,
  "coord": Array [
    0,
    0,
  ],
  "isValid": true,
}
`;

exports[`unsetsValue() non-fixed cells can have their values unset 1`] = `
Cell {
  "_value": undefined,
  "coord": Array [
    0,
    0,
  ],
  "isValid": true,
  "notes": Array [
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
  ],
}
`;
